docs/_static/css/custom.css
body {
    font-family: Tahoma, Arial, Verdana, sans, sans-serif;
    color: #404040;
}


p {
    text-align: justify;
}

.rst-content .highlight-default .highlight > pre {
    line-height: 100% !important;
}

figure {
    text-align: center;
}

figure img {
    display: inline-block;
    padding: 1em;
    border: thin solid Gainsboro !important;
    box-shadow: 5px 5px 10px Gainsboro;
    text-align: center;
    margin: auto;
}

figcaption {
    margin-left: 12%;
    margin-right: 12%;
}

figcaption > p {
    margin: 0.5em;
    text-align: center;
}

code {
    color: #0e7e9c !important;
}

em {
    color: black;
    font-weight: 500;
    font-style: oblique 40eg;
}

a > em {
    color: inherit;
}

h1 {
    color: black;
}

h2 {
    color: #151515;
}

h3 {
    color: #303030;
}

.wy-side-nav-search {
    background-color: #0e7e9c;
}

#killer-features {
    margin: 1em;
    margin-bottom: 3em;
    margin-top: 3em;
    border: thin solid lightgrey;
    border-radius: 1em;
    padding: 1em;
    box-shadow: 5px 5px 5px grey;
}

#killer-caption {
    font-style: italic;
    margin-bottom: 0.5em;
}

.feature {
    padding: 0.5em;
    margin: 1.5em;
    border-radius: 1em;
    width: 90%;
    font-weight: bold;
    box-shadow: 4px 4px 5px grey;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.feature img {
    height: 2.5em;
}

.feature p {
    margin: 0.5em;
}

#feature-input {
    background-color: #0e7e9c;
    color: white;
}

#feature-schema {
    background-color: #d47100;
    color: white;
}

#feature-export {
    background-color: #0e7e9c;
    color: white;
}

#feature-fusion {
    background-color: #d47100;
    color: white;
}

